--- a/src/components/Empresas/style.css
+++ b/src/components/Empresas/style.css
@@ -1,4 +1,13 @@
-.areageralempresas{max-width: 700px; width: 100%; background-color: #3c3174;height: 100%; left: 25%;padding-top: 20px;margin:auto;}
+body{
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.areageralempresas{max-width: 700px; width: 100%; background-color: #25A5bf ;height: 100%; left: 25%;padding-top: 20px;margin:auto;margin-bottom: 100px;}
 
 .areaVideoApre{width: 100%; height: 400px; background: #292929; color: white; display: flex; justify-content: center; align-items: center;}
 .areaVideoApre label{font-weight: bold;font-size: 50px;}
