--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -15,4 +15,4 @@ body{
 
 .btnButtonEntrar{background-color: #25A5bf; border: 1px solid #25A5bf; width: 222px; padding: 10px; cursor: pointer; color: white;margin-bottom: 20px;}
 
-.btnButtonNaotenhoConta{border: 2px solid #25A5bf;width: 200px; padding: 10px; background-color: #fff;cursor: pointer;text-decoration: none; color: #666; }
+.btnButtonNaotenhoConta{border: 2px solid #25A5bf;width: 200px; padding: 10px; background-color: #fff;cursor: pointer;text-decoration: none; color: #25A5bf; }
